# AUVCSLAM

./: Makefile  README  README.md  tobuild.txt
MOOSApps/: CMakeLists.txt  README
MOOSApps/cmake/: FindGoby.cmake
MOOSApps/include/: moos_utils.h  protobuf_util.h
MOOSApps/protobufs/: CMakeLists.txt  factors.proto  packet.proto
MOOSApps/src/comms_test/: CMakeLists.txt  comms_test.cpp
MOOSApps/src/iSimCompass/: CMakeLists.txt  SimCompass.cpp  SimCompass.h  SimCompass_Info.cpp  SimCompass_Info.h  iSimCompass.moos  main.cpp
MOOSApps/src/iSimDVL/: CMakeLists.txt  SimDVL.cpp  SimDVL.h  SimDVL_Info.cpp  SimDVL_Info.h  iSimDVL.moos  main.cpp
MOOSApps/src/iSimDepth/: CMakeLists.txt  SimDepth.cpp  SimDepth.h  SimDepth_Info.cpp  SimDepth_Info.h  iSimDepth.moos  main.cpp
MOOSApps/src/iSimGPS/: CMakeLists.txt  SimGPS.cpp  SimGPS.h  SimGPS_Info.cpp  SimGPS_Info.h  iSimGPS.moos  main.cpp
MOOSApps/src/pAcommsManager/: AcommsManager.cpp  AcommsManager.h  AcommsManager_Info.cpp  AcommsManager_Info.h  CMakeLists.txt  main.cpp  pAcommsManager.moos
MOOSApps/src/pAcommsScheduler/: AcommsScheduler.cpp  AcommsScheduler.h  CMakeLists.txt  pAcommsScheduler.moos
MOOSApps/src/pSensorProc/: CMakeLists.txt  SensorProc.cpp  SensorProc.h  SensorProc_Info.cpp  SensorProc_Info.h  main.cpp  pSensorProc.moos
MOOSApps/src/pSimFeatureDetector/: CMakeLists.txt  README  SimFeatureDetector.cpp  SimFeatureDetector.h  SimFeatureDetector_Info.cpp  SimFeatureDetector_Info.h  main.cpp  pSimFeatureDetector.moos
MOOSApps/src/pVRP/: CMakeLists.txt  VRP.cpp  VRP.h  VRP_Info.cpp  VRP_Info.h  main.cpp  pVRP.moos
data/: E-W-2_detections_summary.mat  E-W-2_vehicle_telemetry.mat  Liam_2nd analysis_ICRA data sets.docx  N-S-1_detections_summary.mat  N-S-1_vehicle_telemetry.mat  N-S-2_detections_summary.mat  N-S-2_vehicle_telemetry.mat  sonar_detections_for_ICRA.docx
isam_coop/: CMakeLists.txt  README
isam_coop/lcmtypes/: acomms_packet_t.lcm  command_list_t.lcm  command_t.lcm  depth_t.lcm  global_t.lcm  odom_xy_global_yprz_t.lcm  odom_xy_t.lcm  point3_t.lcm  pos2_t.lcm  pose3_t.lcm  relative_range_t.lcm  rot3_t.lcm  sidescan_detection_t.lcm  sidescan_detections_t.lcm  trajectory_t.lcm  virtual_pose3_point3_t.lcm  virtual_pose3_pose3_t.lcm
isam_coop/src/: CMakeLists.txt  CoopIsam.cpp  CoopIsam.h  FactorGraph.cpp  FactorGraph.h  Packet.h  PacketManager.cpp  PacketManager.h  conversions.h  isam_coop.h  lcm_utils.h  main.cpp
matlab/: iMatlab_run.m  main.m  playback.m
missions/basic/: .LastOpenedMOOSLogDirectory  clean.sh  kill_all.sh
missions/basic/config/: common.def  sensors.def
missions/basic/scripts/: vehicles_launch.sh
missions/basic_acomms/config/: AUV_1.def  AUV_2.def  common.def  sensors.def  shoreside.def
missions/basic_acomms/plugs/: survey_AUV_1.plug
missions/basic_acomms/scripts/: vehicles_launch.sh
missions/common_plugs/common/: data_datum.plug  data_errata.plug  pLogger.plug  uProcessWatch.plug
missions/common_plugs/shoreside/: pAcommsSimulator.plug  pMarineViewer.plug  pShare.plug  uFldContactRangeSensor.plug  uFldHazardSensor.plug  uFldShoreBroker.plug
missions/common_plugs/vehicle/: iAcommsDriver.plug  iSimCompass.plug  iSimDVL.plug  iSimDepth.plug  iSimGPS.plug  pAcommsManager.plug  pAcommsScheduler.plug  pHelmIvP.plug  pMarinePID.plug  pNodeReporter.plug  pSensorProc.plug  pShare.plug  pSimFeatureDetector.plug  uFldNodeBroker.plug  uSimMarine.plug
missions/common_plugs/vehicle/behaviors/: deploy_depth.plug  return.plug
missions/full_comms/: .LastOpenedMOOSLogDirectory
missions/full_comms/config/: AUV_1.def  AUV_2.def  common.def  sensors.def
missions/full_comms/plugs/: pAUVCSLAM.plug  pSimFeatureDetector.plug  survey_AUV_1.plug  survey_AUV_2.plug
missions/full_comms/scripts/: vehicles_launch.sh
